tests/badopts.srv
; pos=fail err=3 warn=0 dummycrprotection=
#units save restore restore restore ; `restore` without corresponding `save`
#units D=bad a=bad a=bad ab=bad v=bad vb=bad s=bad
#units order=bad typeab=bad typevb=bad
